# jenkins-cli

./: COMPLETION.md  Cargo.toml  README.md
src/: cli.rs  client.rs  config.rs  interactive.rs  main.rs  output.rs
src/commands/: alias.rs  build.rs  completion.rs  config.rs  logs.rs  mod.rs  open.rs  status.rs
src/helpers/: formatting.rs  init.rs  mod.rs  url.rs
tests/: cli_tests.rs
