[package]
name = "jenkins-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "jenkins"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.41", features = ["full"] }
anyhow = "1.0"
dirs = "5.0"
serde_yaml = "0.9"
inquire = "0.7"
url = "2.5"
open = "5.0"
console = "0.15"
indicatif = "0.17"

[dev-dependencies]
tempfile = "3.10"
